--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Icon picker widget for Angular (version 13 and newer)",
   "bugs": "https://github.com/tech-advantage/ngx-icon-picker/issues",
   "license": "MIT",
-  "version": "13.0.0",
+  "version": "13.1.0",
   "private": false,
   "scripts": {
     "ng": "ng",
@@ -72,5 +72,11 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "typescript": "~4.4.3"
+  },
+  "overrides": {
+    "@angular-devkit/build-angular": {
+      "webpack-dev-middleware": "~5.3.4"
+    },
+    "webpack": "5.91.0"
   }
 }
